--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "jest-cli": "^25.2.4",
     "style-loader": "^1.2.1",
     "webpack": "^4.43.0",
-    "webpack-cli": "^3.3.11"
+    "webpack-cli": "^3.3.11",
+    "webpack-dev-server": "^3.11.0"
   }
 }
