--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dist"
   ],
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "start:dev": "webpack-dev-server"
   },
   "repository": {
     "type": "git",
@@ -27,9 +28,13 @@
   },
   "homepage": "https://github.com/ArtemChizhevskikh/frontend-project-lvl3#readme",
   "dependencies": {
+    "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
     "jquery": "^3.5.1",
-    "popper.js": "^1.16.1"
+    "lodash": "^4.17.15",
+    "melanke-watchjs": "^1.5.2",
+    "popper.js": "^1.16.1",
+    "yup": "^0.28.5"
   },
   "devDependencies": {
     "@babel/cli": "^7.8.4",
