--- a/package.json
+++ b/package.json
@@ -29,10 +29,11 @@
   "homepage": "https://github.com/ArtemChizhevskikh/frontend-project-lvl3#readme",
   "dependencies": {
     "axios": "^0.19.2",
-    "bootstrap": "^4.4.1",
+    "bootstrap": "^4.5.2",
+    "i18next": "^19.4.4",
     "jquery": "^3.5.1",
-    "lodash": "^4.17.15",
-    "melanke-watchjs": "^1.5.2",
+    "lodash": "^4.17.19",
+    "on-change": "^2.0.1",
     "popper.js": "^1.16.1",
     "yup": "^0.28.5"
   },
